[package]
name = "phaser"
version = "0.5.6"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
homepage = "https://opensource.bloom.sh/phaser"
repository = "https://github.com/bloom42/phaser.git"
description = "The cloud native security scanner ☁️"
keywords = ["security", "bloom", "phaser", "scanner"]
license-file = "LICENSE.txt"

[dependencies]
# cli args && options parsing
clap = "2.32"

# for deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# to use AWS
rusoto_core = "0.36"
rusoto_s3 = "0.36"

# misc
# lazy_static = "1.3"
dotenv = "0.13"
failure = "0.1"
serde-xml-rs = "0.3"
reqwest = "0.9"
url = "1.7"
# trust-dns = "0.15" -> use dig instead
postgres = "0.15"
regex = "1"
mysql = "15.1"
uuid = { version = "0.7", features = ["v4"] }

# to use datetime types
chrono = "0.4"

# logging
slog = "2.4"
slog-json = "2.3"
log = "0.4"
slog-scope = "4.1"

# error tracking
sentry = "0.12.0"


[profile.release]
# for error tracking
debug = true
